All checking and savings deposit working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="account">
       <h2>Savings</h2>
       <div class="balance" id="savings_balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <input type="text" placeholder="enter an amount" class="savings"/>
       <input type="button" value="Deposit" class="savings-deposit" />
       <input type="button" value="Withdraw" class="savings-withdrawal"/>
     </div>
