Initial working solution

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="header">
-      <div><img src="ga.png" /></div>
+      <div><img src="ga.png" alt="General Assembly"/></div>
       <div class="title">Bank of GA</div>
     </div>
     
@@ -27,6 +27,7 @@
       <input type="button" value="Withdraw" />
     </div>
 
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
