can deposit and withdraw into savings account.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="balance" id="balSave">$0.00</div>
       <input type="text" placeholder="enter an amount" id="entSave"/>
       <input type="button" value="Deposit" id="depSave"/>
-      <input type="button" value="Withdraw" id="withSave"/>
+      <input type="button" value="Withdraw" id="witSave"/>
     </div>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
     <script src="atm.js"></script>
