--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" class="checkingInput" placeholder="enter an amount" />
+      <input type="button" class="checkingButton" value="Deposit" />
+      <input type="button" class="checkingButton" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" class="savingsInput" placeholder="enter an amount" />
+      <input type="button" class="savingsDeposit"value="Deposit" />
+      <input type="button" class="savingsWithdraw" value="Withdraw" />
     </div>
 
     <script src="atm.js"></script>
