only works when I call checkingNewBalance = parseInt(.val()) in console

--- a/obfuscate/atm.html
+++ b/obfuscate/atm.html
@@ -3,8 +3,7 @@
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+    <link rel="stylesheet" href="atm.css"/>
   </head>
   <body>
     <div id="content">
@@ -28,5 +27,7 @@
       </div>
       <div class="clear"></div>
     </div>
+      <script src="atm.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
   </body>
 </html>
