--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div id="checkingBalanceDiv">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="checkingBalanceDiv">$0</div>
+      <input type="text" id="checkingAmount" placeholder="enter an amount" />
+      <input type="button" id="checkingDepositButton" value="Deposit" />
+      <input type="button" id="withdrawButton" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="savingsBalanceDiv">$0</div>
+      <input type="text" id="savingsAmount" placeholder="enter an amount" />
+      <input type="button" value="Deposit" id="savingsDButton" />
+      <input type="button" id="savingsWButton" value="Withdraw"  />
     </div>
 
     <script src="atm.js"></script>
