--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account">
+    <div class="account" id ="checking">
       <h2>Checking</h2>
 
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div class="account" id="savings">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input class="input" type="text" placeholder="enter an amount"/>
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
 
