--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
     <script src="atm.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
-    <div class="header">
-      <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
-    </div>
-
-    <div id="checking" class="account">
-      <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
-    </div>
-
-    <div id="savings" class="account">
-      <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+    <div id="content">
+      <div id="nav">
+        <div id="logo"><img src="ga.png" /></div>
+        <div id="title">Bank of GA</div>
+      </div>
+      <div class="account" id="account1">
+        <h2>Checking</h2>
+        <div class="balance" id="checking_balance">$0</div>
+        <input id="checking_amount" type="text" placeholder="enter an amount" />
+        <input id="checking_deposit" type="button" value="Deposit" />
+        <input id="checking_withdraw" type="button" value="Withdraw" />
+      </div>
+      <div class="account" id="account2">
+        <h2>Savings</h2>
+        <div class="balance" id="savings_balance">$0</div>
+        <input id="savings_amount" type="text" placeholder="enter an amount" />
+        <input id="savings_deposit" type="button" value="Deposit" />
+        <input id="savings_withdraw" type="button" value="Withdraw" />
+      </div>
+      <div class="clear"></div>
     </div>
   </body>
 </html>
