--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+
+
   </head>
   <body>
     <div class="header">
@@ -28,4 +29,9 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
   </body>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="atm.js"></script>
+  
 </html>
