intial commit, checking deposit and withdraw buttons work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+    <script src="/Users/david/jquery-1.12.4.min.js" charset="utf-8"></script>    
   </head>
   <body>
     <div class="header">
@@ -27,5 +27,6 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <script src="atm.js"></script>
   </body>
 </html>
