--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="atm.css">
     <script src="atm.js"></script>
   </head>
