--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="atm.js"></script>
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
