--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="atm.css">
     <script src="atm.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+    $( document ).ready(function() {
+      console.log( "document loaded" );
+      });
+    </script>
   </head>
   <body>
     <div class="header">
