--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div id="balanceChecking" class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <input id ="checkingInput"class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div id="balanceSaving" class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <div id="balanceSavings" class="balance">$0</div>
+      <input id="savingsInput" class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
