Adds savings account and color indication

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div id="balanceCheck" class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <input id="checkInput" class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
@@ -24,7 +24,7 @@
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div id="balanceSave" class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <input id="saveInput" class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
