numbers adding together

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     </div>
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <div id="checking_balance" class="balance">$0</div>
+      <input id="add" class="input" type="text" placeholder="enter an amount" value = 10 />
       <input id="deposit" class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input id ="withdraw" class="withdraw" type="button" value="Withdraw" />
     </div>
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input id="depositB" class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id ="savings_balance" class="balance">$0</div>
+      <input id="addb" class="input" type="text" placeholder="enter an amount" />
+      <input id="depositb" class="deposit" type="button" value="Deposit" />
+      <input id ="withdrawb" class="withdraw" type="button" value="Withdraw" />
     </div>
   </body>
 </html>
