Deposit-Update Balance Completed

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="balance-checking" class="balance">850</div>
+      <input id="input-amount_checking" class="input" type="text" placeholder="enter an amount" value="763"/>
+      <input id="button-deposit_checking" class="deposit" type="button" value="Deposit" />
+      <input id="button-withdrawal_checking" class="withdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="balance-savings" class="balance">9806</div>
+      <input id="input-amount_savings" class="input" type="text" placeholder="enter an amount" />
+      <input id="button-deposit_savings" class="deposit" type="button" value="Deposit" />
+      <input id="button-withdrawal_savings" class="withdraw" type="button" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="atm.js"></script>
+    <script src="atm2.js"></script>
   </body>
 </html>
+
+<input type="number" name="quantity" min="1" max="5">
