--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div id="checking_balance" class="balance">$0</div>
-      <input id="add" class="input" type="text" placeholder="enter an amount" />
+      <input id="add" class="input" type="text" placeholder="enter an amount" value = 2 />
       <input id="deposit" class="deposit" type="button" value="Deposit" />
       <input id ="withdraw" class="withdraw" type="button" value="Withdraw" />
     </div>
