--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div id="bal1" class="balance">$0</div>
+      <input id="chkInput" type="text" placeholder="enter an amount" />
+      <input id="chkDep" type="button" value="Deposit" />
+      <input id="chkWithdraw" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
