Project Requirements Complete

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div id="balance-checking" class="balance">850</div>
-      <input id="input-amount_checking" class="input" type="text" placeholder="enter an amount" value="763"/>
+      <div id="balance-checking" class="balance">0</div>
+      <input id="input-amount_checking" class="input" type="text" placeholder="enter an amount"/>
       <input id="button-deposit_checking" class="deposit" type="button" value="Deposit" />
       <input id="button-withdrawal_checking" class="withdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div id="balance-savings" class="balance">9806</div>
+      <div id="balance-savings" class="balance">0</div>
       <input id="input-amount_savings" class="input" type="text" placeholder="enter an amount" />
       <input id="button-deposit_savings" class="deposit" type="button" value="Deposit" />
       <input id="button-withdrawal_savings" class="withdraw" type="button" value="Withdraw" />
