added overdraft protection withdrawal, standard withdrawal will go to neg bslance

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="checkingbalance">$0</div>
+      <input id="checkinginput" type="text" placeholder="enter an amount" />
+      <input id="checkingdeposit" type="button" value="Deposit" />
+      <input id="checkingwithdrawal" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div id="savingsbalance">$0</div>
+      <input id="savingsinput" type="text" placeholder="enter an amount" />
+      <input id="savingsdeposit" type="button" value="Deposit" />
+      <input id="savingswithdrawal" type="button" value="Withdraw" />
     </div>
   </body>
 </html>
