--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
@@ -27,5 +26,51 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <div id="savings" class="account">
+      <h2>Savings</h2>
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
+    </div>
+
+    <div id="savings" class="account">
+      <h2>Savings</h2>
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
+    </div>
+    <div id="savings" class="account">
+      <h2>Savings</h2>
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
+    </div>
+    <div id="savings" class="account">
+      <h2>Savings</h2>
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
+    </div>
+    <div id="savings" class="account">
+      <h2>Savings</h2>
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
+    </div>
+    <div id="savings" class="account">
+      <h2>Savings</h2>
+      <div class="balance">$0</div>
+      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
+    </div>
+
+    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <script src="atm.js"></script>
   </body>
 </html>
