--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>ATM</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="atm.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
   <div class="header">
@@ -27,7 +28,7 @@
     <input class="withdraw" type="button" value="Withdraw" />
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>`
+
   <script src="atm.js"></script>
 </body>
 </html>
