--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <form id='entry'>
+          <input class="input" type="text" placeholder="enter an amount" />
+          <input class="deposit" type="button" value="Deposit" />
+          <input class="withdraw" type="button" value="Withdraw" />
+      </form>
     </div>
 
     <div id="savings" class="account">
