Changed background color to red and added jQuery script file. Also moved atm.js to bottom of body tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
@@ -27,5 +26,9 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+
+    <script src="http://code.jquery.com/jquery-3.0.0.min.js"></script>
+    <script src="atm.js"></script>
+
   </body>
 </html>
