change background red on mouseover, log hello on checking deposit click

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
   <body>
@@ -16,7 +17,7 @@
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
+      <input class="deposit checking" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
