--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <form id='entry'>
+      <form class='entry'>
           <input class="input" type="text" placeholder="enter an amount" />
           <input class="deposit" type="button" value="Deposit" />
           <input class="withdraw" type="button" value="Withdraw" />
@@ -24,9 +24,11 @@
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <form class='entry'>
+          <input class="input" type="text" placeholder="enter an amount" />
+          <input class="deposit" type="button" value="Deposit" />
+          <input class="withdraw" type="button" value="Withdraw" />
+      <form class='entry'>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="atm.js"></script>
