--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -15,17 +15,22 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
+
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+    
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
+    <form id="entry">
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+    </entry>
     </div>
+    <script src="atm.js"></script>
   </body>
 </html>
