Implemented three functions: transact, getTransactionAmount, adjustBalance.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+    <script
+            src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div class="header">
@@ -27,5 +31,6 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <script src="atm.js"></script>
   </body>
 </html>
