got input in deposit to log in console

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="atm.js"></script>
+    <script src="automatedteller.js"></script>
   </head>
   <body>
     <div class="header">
@@ -17,14 +17,14 @@
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit checking" type="button" value="Deposit" />
+      <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
+      <input class="input" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
