gets checking deposit button to work

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
   <body>
