Checking Deposit Functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="atm.js"></script>
   </head>
   <body>
@@ -26,6 +27,7 @@
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+
     </div>
   </body>
 </html>
