finazlied and got the uncommented down to 68 lines

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       <form class='entry'>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="atm.js"></script>
+    <script src="uncommented.js"></script>
   </body>
 </html>
