--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="atm.js"></script>
     </div>
   </body>
 </html>
