--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!doctype html>
 <html>
-  <head>
-    <title>ATM</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
-  </head>
-  <body>
-    <div class="header">
-      <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
-    </div>
 
-    <div id="checking" class="account">
-      <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
-    </div>
+	<head>
+		<title>ATM</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="atm.css">
+	</head>
 
-    <div id="savings" class="account">
-      <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
-    </div>
-  </body>
+	<body>
+		<div class="header">
+			<div><img src="ga.png" /></div>
+			<div class="title">Bank of GA</div>
+		</div>
+
+		<div id="checking" class="account">
+			<h2>Checking</h2>
+			<div class="balance">$0</div>
+			<input class="input" type="text" placeholder="enter an amount" />
+			<input class="deposit" type="button" value="Deposit" />
+			<input class="withdraw" type="button" value="Withdraw" />
+		</div>
+
+		<div id="savings" class="account">
+			<h2>Savings</h2>
+			<div class="balance">$0</div>
+			<input class="input" type="text" placeholder="enter an amount" />
+			<input class="deposit" type="button" value="Deposit" />
+			<input class="withdraw" type="button" value="Withdraw" />
+
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+			<script src="atm.js"></script>
+		</div>
+	</body>
+
 </html>
