--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="checking" class="account">
 			<h2>Checking</h2>
 			<div class="balance">$0</div>
-			<input class="input" type="text" placeholder="enter an amount" />
+			<input class="input" type="text" placeholder="enter an amount" value="$1000" />
 			<input class="deposit" type="button" value="Deposit" />
 			<input class="withdraw" type="button" value="Withdraw" />
 		</div>
@@ -24,13 +24,13 @@
 		<div id="savings" class="account">
 			<h2>Savings</h2>
 			<div class="balance">$0</div>
-			<input class="input" type="text" placeholder="enter an amount" />
+			<input class="input" type="text" placeholder="enter an amount" value="$1000" />
 			<input class="deposit" type="button" value="Deposit" />
 			<input class="withdraw" type="button" value="Withdraw" />
-
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-			<script src="atm.js"></script>
 		</div>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="atm.js"></script>
 	</body>
 
 </html>
