--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
-  </head>
+      </head>
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
@@ -28,4 +27,8 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
   </body>
+
+  <script
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="atm.js"></script>
 </html>
