added events and captured amounts

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   </head>
   <body>
     <div class="header">
-      <div><img src="ga.png" /></div>
+      <div><img src="ga.png" alt="GA Logo" /></div>
       <div class="title">Bank of GA</div>
     </div>
 
@@ -27,5 +27,7 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="text/javascript" src="atm.js"></script>
   </body>
 </html>
