--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
+    <div id="container">
+      <div id="active">
 
-    <div id="checking" class="account">
+      </div>
+      <div id="options" class="flexList hidden">
+        <div class="listItem option" onclick="atm.selectDeposit()">Deposit</div>
+        <div class="listItem option" onclick="atm.selectWithdraw()">Withdraw</div>
+        <div class="listItem option hidden" onclick="atm.selectTransfer()">Transfer</div>
+      </div>
+      <div id="input" class="flexList hidden">
+        <input id="input-field" type="text" value="$100.00"></input>
+        <div id="button" class="option"></div>
+      </div>
+      <div id="accounts" onclick="atm.selectAccount()"></div>
+    </div>
+
+
+
+
+
+
+    <!-- <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
@@ -26,6 +45,8 @@
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
-    </div>
+    </div> -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="atm.js"></script>
   </body>
 </html>
