--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<input class="input" type="text" placeholder="enter an amount" value="$1000" />
 			<input class="deposit" type="button" value="Deposit" />
 			<input class="withdraw" type="button" value="Withdraw" />
+			<input class="transfer" type="button" value="Transfer" />
 		</div>
 
 		<div id="savings" class="account">
@@ -27,6 +28,7 @@
 			<input class="input" type="text" placeholder="enter an amount" value="$1000" />
 			<input class="deposit" type="button" value="Deposit" />
 			<input class="withdraw" type="button" value="Withdraw" />
+			<input class="transfer" type="button" value="Transfer" />
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
