--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 			<input class="transfer" type="button" value="Transfer" />
 		</div>
 
+		<div id="log" class="log">
+			<h2>Transaction History</h2>
+			<table class="history">
+				<tr>
+					<th>Date</th>
+					<th>Type</th>
+					<th>Account</th>
+					<th>Amount</th>
+					<th>Balance</th>
+				</tr>
+			</table>
+		</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="atm.js"></script>
 	</body>
