--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
@@ -18,6 +17,8 @@
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+      <input class="trInput" type="text" placeholder="enter a transfer amount" />
+      <input class="transfer" type="button" value="Transfer" />
     </div>
 
     <div id="savings" class="account">
@@ -26,6 +27,10 @@
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+      <input class="trInput" type="text" placeholder="enter a transfer amount" />
+      <input class="transfer" type="button" value="Transfer" />
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="atm.js"></script>
   </body>
 </html>
