Log JS functionality

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 		<div id="log" class="log">
 			<h2>Transaction History</h2>
 			<table class="history">
-				<tr>
+				<tr class="labels">
 					<th>Date</th>
-					<th>Type</th>
 					<th>Account</th>
+					<th>Type</th>
 					<th>Amount</th>
-					<th>Balance</th>
+					<th>New Balance</th>
 				</tr>
 			</table>
 		</div>
