--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input class="input" type="number" placeholder="enter an amount" />
+      <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+      <input class="transferIn" type="text" placeholder="enter an amount" />
+      <input class="transfer" type="button" value="Transfer" />
     </div>
 
     <div id="savings" class="account">
@@ -25,6 +27,8 @@
       <input class="input" type="text" placeholder="enter an amount" />
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
+      <input class="transferIn" type="text" placeholder="enter an amount" />
+      <input class="transfer" type="button" value="Transfer" />
     </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
       <script src="atm.js"></script>
