fixed NaN bug, atm working. Need to add logic for trying to take out too much money when withdrawing

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
-  </head>
+   </head>
   <body>
     <div class="header">
-      <div><img src="ga.png" /></div>
+      <div><img src="https://theproductguy.files.wordpress.com/2011/03/ga_logo_1797.png" alt="General Assembly"/></div>
       <div class="title">Bank of GA</div>
     </div>
 
