minor text fixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
+      <div class="title">Bank of Tim</div>
     </div>
 
     <div id="checking" class="account">
