Working. Still no UI around user account management. Accounts are hardcoded.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
     </div>
     <div id="container">
       <div id="active">
-        <div class="account">
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-        </div>
       </div>
       <div id="options" class="flexList">
         <div id="deposit" class="option">Deposit</div>
@@ -26,11 +19,12 @@
         <div id="transfer" class="option hidden">Transfer</div>
       </div>
       <div id="input" class="flexList hidden">
-        <input id="input-field" type="number" value="100.00"></input>
+        <input id="input-field" type="number" value="100.00" class="option"></input>
         <div id="button" class="option"></div>
         <div id="cancel" class="option">Cancel</div>
       </div>
-      <div id="accounts"></div>
+      <h3>Other Accounts</h3>
+      <div id="accounts" class="flexList"></div>
     </div>
 
     <!-- <div id="checking" class="account">
