Deposit logic added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
@@ -28,4 +27,6 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="atm.js"></script>
 </html>
