atm adding, subtracting, and updating

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
+
+
+
+
+
+
+
+
+
+
 
     <div id="checking" class="account">
       <h2>Checking</h2>
@@ -27,5 +36,19 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="atm.js"></script>
   </body>
 </html>
