--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
     <script src="atm.js"></script>
   </head>
+
   <body>
+
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
@@ -27,5 +30,7 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+
   </body>
+
 </html>
