--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js">
+
+    </script>
     <script src="atm.js"></script>
   </head>
   <body>
