--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
@@ -28,4 +29,5 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
