--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
@@ -19,7 +18,6 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
-
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
@@ -27,5 +25,7 @@
       <input class="deposit" type="button" value="Deposit" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
+    <!-- Add a link to a jQuery CDN here. -->
+    <!-- Cut the link to atm.js from the <head> (see above), and paste it here.-->
   </body>
 </html>
