made deposit button work for checking

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div class="header">
@@ -24,8 +23,11 @@
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <button class="deposit" value="Deposit">Deposit</button>
+      <button class="Withdraw" value="Withdraw">Withdraw</button>
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+      <script src="atm.js"></script>
+      </script>
     </div>
   </body>
 </html>
