checking deposit is now functional

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$<span id="checkingBalance">0</span></div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div class="cbalance">$<span id="checkingBalance">100</span></div>
+      <input class="cinput" type="text" placeholder="0" value=""/>
+      <input class="cdeposit" type="button" value="Deposit" />
+      <input class="cwithdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$<span id="savingsBalance">0</span></div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div class="sbalance">$<span id="savingsBalance">100</span></div>
+      <input class="sinput" type="text" placeholder="0" value=""/>
+      <input class="sdeposit" type="button" value="Deposit" />
+      <input class="swithdraw" type="button" value="Withdraw" />
     </div>
   </body>
 </html>
